--- a/src-vs2012/emulator/emulator/emulator.vcxproj
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClInclude Include="macros.h" />
     <ClInclude Include="nes\internals.h" />
+    <ClInclude Include="nes\opcodes.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="types\bitfield.h" />
@@ -90,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="emulator.cpp" />
+    <ClCompile Include="nes\opcodes.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../stdafx.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
