--- a/src-vs2012/emulator/emulator/emulator.vcxproj.filters
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="nes\internals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nes\opcodes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="unittest\framework.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nes\opcodes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
