--- a/src-vs2012/emulator/emulator/emulator.vcxproj.filters
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="nes\opcodes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nes\mmc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="nes\opcodes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nes\mmc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
