added rom loader

--- a/src-vs2012/emulator/emulator/emulator.vcxproj.filters
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="nes\mmc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nes\romloader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
