wrap global functions in namespaces

--- a/src-vs2012/emulator/emulator/emulator.vcxproj
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj
@@ -54,6 +54,8 @@
       <CallingConvention>FastCall</CallingConvention>
       <ExceptionHandling>false</ExceptionHandling>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DisableSpecificWarnings>4146;4530</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
