--- a/src-vs2012/emulator/emulator/emulator.vcxproj.filters
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClCompile Include="nes\cpu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nes\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
