changes: fix typos; minor refactoring; keep .user files but exclude .log;.txt files in repository; IRQTYPE is now a strong-typed enum and flagset can handle this kind of enums; add ptr_diff macro to compute distance between two pointers

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@
 
 #Visual Studio files
 *.[Oo]bj
-*.user
+#*.user
 *.aps
 *.pch
 *.vspscc
@@ -71,3 +71,7 @@ ipch/
 [Dd]ebug*/
 [Rr]elease*/
 Ankh.NoLoad
+
+#Emulator logs
+*.log
+*.txt
