--- a/src-vs2012/emulator/emulator/emulator.vcxproj.filters
+++ b/src-vs2012/emulator/emulator/emulator.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="nes\debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nes\ppu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="nes\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nes\ppu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
